updated styles for cards and hero section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Deployeazy | Deploy Your Projects Easily</title>
 </head>
 <body>
+    <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
             <h1 class="logo">Deployeazy</h1>
@@ -21,5 +22,34 @@
             </nav>
         </div>
     </div>
+
+    <!-- Showcase -->
+    <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>Easier Deployment</h1>
+                <p>Lucas ipsum dolor sit amet lyn wyl altyr windu desolous qel-droma kal glymphid tc-14 wroonian. 
+                    Jinn bane antonio cody naberrie mothma dooku braxant evazan. 
+                </p>
+                <a href="features.html" class="btn btn-outline">Learn More</a>
+            </div>
+            <div class="showcase-form card">
+                <h2>Request a Demo</h2>
+                <form>
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="text" name="company" placeholder="Company Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <input type="submit" value="Send" class="btn btn-primary">
+                </form>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
