--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="./css/utilities.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Deployeazy | Deploy Your Projects Easily</title>
 </head>
@@ -50,6 +51,39 @@
             </div>
         </div>
     </section>
+
+    <!-- Statistics -->
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">
+                Jin'ha secura felth voxyn yarael plo himoran quadrinaros. 
+                Typho mothma grievous abrion var jade. 
+                Hapan -1b duro latter gungan yarael oppo malastare.
+            </h3>
+
+            <div class="grid grid-3 text-center my-4">
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>10,345,124</h3>
+                    <p class="text-secondary">Deployments</p>
+                </div>
+                <div>
+                    <i class="fas fa-upload fa-3x"></i>
+                    <h3>833 TB</h3>
+                    <p class="text-secondary">Published</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>2,503</h3>
+                    <p class="text-secondary">Projects</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- CLI -->
+
 
 </body>
 </html>
