--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/cloudfav.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./css/utilities.css">
     <link rel="stylesheet" href="./css/styles.css">
@@ -83,7 +84,89 @@
     </section>
 
     <!-- CLI -->
+    <section class="cli">
+        <div class="container grid">
+            <img src="./images/cli.png" alt="cli">
+            <div class="card">
+                <h3>Easy to use, cross platform CLI</h3>
+            </div>
+            <div class="card">
+                <h3>Deploy in just a few seconds</h3>
+            </div>
+        </div>
+    </section>
 
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Extreme Cloud Hosting</h2>
+                <p class="lead my-1">Aayla vader hutt su sebulba mon gorith wicket. Talz ackbar ben padmé crynyd.</p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="./images/cloud.png" alt="cloud">
+        </div>
+    </section>
+
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="md text-center my-2">
+            Supported Languages
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="./images/logos/node.png" alt="nodejs">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="./images/logos/python.png" alt="python">
+            </div>
+            <div class="card">
+                <h4>C#</h4>
+                <img src="./images/logos/csharp.png" alt="csharp">
+            </div>
+            <div class="card">
+                <h4>Ruby</h4>
+                <img src="./images/logos/ruby.png" alt="ruby">
+            </div>
+            <div class="card">
+                <h4>PHP</h4>
+                <img src="./images/logos/php.png" alt="php">
+            </div>
+            <div class="card">
+                <h4>Scala</h4>
+                <img src="./images/logos/scala.png" alt="scala">
+            </div>
+            <div class="card">
+                <h4>Clojure</h4>
+                <img src="./images/logos/clojure.png" alt="clojure">
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Deployeazy</h1>
+                <p>Copyright &copy; 2021</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
